4.5 -> 5.0:
    - jbj: not yet for binary search retrieve using tagValue.
    - jbj: unbork --yaml.
    - rpm.org: rpmpsi iterator.
    - jbj: mark myTagName() and myTagValue() linear lookup for destruction.
    - jbj: create rpmdb/rpmtag.h, split from lib/rpmlib.h.
    - jbj: make the --info field colons align correctly, more (#323221).
    - jbj: fix :time and :date formats, pad --info spewage.
    - jbj: eliminate padding & formatPrefix, strings is strings now.
    - jbj: bury hex dump in intFormat defaults, refactor common code.
    - jbj: hmmm, --yaml is b0rken atm, todo++;
    - jbj: add assert's to control tag container values.
    - jbj: teach formatValue() to create an element tag container.
    - jbj: change the common integer format from int_32 to int_64 everywhere.
    - jbj: teach intFormat() to handle strings.
    - jbj: add he->ix, eliminate the less egregious he->freeData overload hack.
    - jbj: remove useless HE_t indirection with (*he->p).ptr, he->p.ptr instead.
    - jbj: fix several indirection problems.
    - jbj: eliminate data arg in (*headerTagFormatFunction).
    - jbj: start simplifying the world's most complicated sprintf.
    - jbj: fix: trigger conditions not displayed correctly.
    - jbj: trade-in element overload hack for another, less egregious, hack.
    - jbj: eliminate element arg in (*headerTagFormatFunction).
    - jbj: eliminate type arg in (*headerTagFormatFunction), use he->t instead.
    - jbj: drill HE_t through (*headerTagFormatFunction).
    - jbj: debugedit segfault (#336951,#337011) see #337051 too.
    - jbj: commit to hge(h, he, ...) extraction in API. ABI not yet.
    - jbj: remove the pointless ;-) indirection in *(HE_t) for type/count.
    - jbj: drill rpmTagData everywhere.
    - jbj: start regularizing hae/hme calls.
    - jbj: drill rpmTagCount everywhere.
    - jbj: change hPTR_t to hRET_t in ABI, revert to const void * in API.
    - jbj: drill hPTR_t through prototypes. hRET_t * refactor next.